updating build files